# algorithms

./: .gitignore  README.md  pom.xml
AlgosJava/: README.md  pom.xml
AlgosJava/src/test/java/al/go/: UnaryTest.java
AlgosJava/src/tests/java/org/dice/: BinaryGapTest.java  CyclicRotationTest.java  OddOccurencesInArrayTest.java  OddOccurrencesInArrayTest.java  StringCompressionCanalPlusTests.java  UnaryTest.java
JS/algoj/: jest.config.json  lsdqdsq  package-lock.json  package.json
JS/algoj/src/: ModuloDivisionDisplay.js  Numbers.js  sudoku.test.js  sudokuSolver.js
Java/: README.md  pom.xml
Java/src/main/java/al/go/: Main.java
Java/src/test/java/al/go/: AsciiArtTest.java  BinaryGapTest.java  CodeWarsTest.java  CyclicRotationTest.java  FrogJumpTest.java  LikesTest.java  OddOccurrencesInArrayTest.java  StringCompressionCanalPlusTests.java  UnaryTest.java
Rust/: Cargo.toml  pom.xml
Rust/src/: main.rs  test.rs
Rust/src/codinggames/: lib.rs  mod.rs  shadows_of_the_knight_1.rs  tournament.rs
Scala/: .scalafmt.conf  README.md  build.sbt  pom.xml
Scala/.bsp/: sbt.json
Scala/project/: Dependencies.scala  plugins.sbt
Scala/src/main/scala/al/gro/: BaseConverter.scala  BuzzleObj.scala  FrogRiverSolver.scala  LightBulbs.scala  Main.scala  Narcissistic.scala  SumOfDigits.scala  WhoLikesThis.scala
Scala/src/test/scala/al/gro/: BuzzleTest.scala  EnigmaTest.scala  LightBulbTest.scala  NarcissisticTest.scala  SumOfDigitsTest.scala  WhoLikesThisTest.scala
algos/: README.md  build.sbt  pom.xml
algos/.bsp/: sbt.json
algos/project/: .scalafmt.conf
(+43 files in other folders)
